--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.firebase.crashlytics'
 apply from: '../groovy/encrypt.gradle'
 ext {
     openRelease = true
@@ -69,22 +70,18 @@ repositories {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(include: ['*.aar'], dir: 'libs')
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     if (useProject) {
         implementation project(":library")
-    } else {
-        implementation 'com.hauyu:adsdk:7.0.2-SNAPSHOT@aar'
-        implementation 'androidx.percentlayout:percentlayout:1.0.0'
-        implementation 'com.github.megatronking.stringfog:xor:1.1.0'
     }
+
     configurations.all {
         resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
         resolutionStrategy.cacheDynamicVersionsFor 0, 'seconds'
     }
-    implementation  'com.umeng.umsdk:common:9.4.7'// 必选
-    implementation  'com.umeng.umsdk:asms:1.4.1'// 必选
-    implementation 'com.umeng.umsdk:apm:1.5.2' // 错误分析升级为独立SDK，看crash数据请一定集成，可选
+
     implementation 'com.talkingdata:talkingdata:5.0.12-1'
 
     // implementation 'com.github.markzhai:blockcanary-android:1.5.0'
@@ -92,6 +89,7 @@ dependencies {
     implementation 'me.samlss:broccoli:1.0.0'
     // firebase
     implementation 'com.google.firebase:firebase-analytics:21.0.0'
+    implementation 'com.google.firebase:firebase-crashlytics:18.3.7'
 
     // 调试数据库，在浏览器打开网址, adb logcat -s DebugDB查看
     debugImplementation('com.amitshekhar.android:debug-db:1.0.1')
