--- a/groovy/ads.gradle
+++ b/groovy/ads.gradle
@@ -42,22 +42,22 @@ dependencies {
         implementation 'androidx.legacy:legacy-support-v4:1.0.0'
         implementation 'androidx.appcompat:appcompat:1.3.0-alpha02'
         //TradPlus
-        implementation 'com.tradplusad:tradplus:11.1.0.1'
+        implementation 'com.tradplusad:tradplus:11.2.0.1'
         // Adx
-        implementation 'com.tradplusad:tp_exchange:40.11.1.0.1'
+        implementation 'com.tradplusad:tp_exchange:40.11.2.0.1'
         implementation 'com.google.code.gson:gson:2.8.6'
         // Cross Promotion
-        implementation 'com.tradplusad:tradplus-crosspromotion:27.11.1.0.1'
+        implementation 'com.tradplusad:tradplus-crosspromotion:27.11.2.0.1'
     }
 
 //////////////////////////////////////////////////////////////////////////////////////////
 
     if (isContains(include_platform_list, APPLOVIN)) {
         // applovin
-        implementation 'com.applovin:applovin-sdk:12.1.0'
+        implementation 'com.applovin:applovin-sdk:12.3.1'
         if (isContains(include_platform_list, TRADPLUS)) {
             // tradplus applovin mediation
-            implementation 'com.tradplusad:tradplus-applovin:9.11.1.0.1'
+            implementation 'com.tradplusad:tradplus-applovin:9.11.2.0.1'
         }
         if (isContains(include_platform_list, ADMOB)) {
             // google applovin mediation
@@ -77,7 +77,7 @@ dependencies {
         }
         if (isContains(include_platform_list, TRADPLUS)) {
             // tradplus mediation
-            implementation 'com.tradplusad:tradplus-googlex:2.11.1.0.1'
+            implementation 'com.tradplusad:tradplus-googlex:2.11.2.0.1'
         }
     }
 //////////////////////////////////////////////////////////////////////////////////////////
@@ -91,7 +91,7 @@ dependencies {
         }
         if (isContains(include_platform_list, TRADPLUS)) {
             // tradplus facebook mediation
-            implementation 'com.tradplusad:tradplus-facebook:1.11.1.0.1'
+            implementation 'com.tradplusad:tradplus-facebook:1.11.2.0.1'
         }
         if (isContains(include_platform_list, ADMOB)) {
             // google facebook mediation
@@ -102,7 +102,7 @@ dependencies {
 
     if (isContains(include_platform_list, MINTEGRAL)) {
         // mintegral
-        def mintegral_version = "16.6.51"
+        def mintegral_version = "16.6.61"
         implementation "com.mbridge.msdk.oversea:videojs:${mintegral_version}"
         implementation "com.mbridge.msdk.oversea:mbjscommon:${mintegral_version}"
         implementation "com.mbridge.msdk.oversea:playercommon:${mintegral_version}"
@@ -120,33 +120,33 @@ dependencies {
         implementation "com.mbridge.msdk.oversea:newinterstitial:${mintegral_version}"
         if (isContains(include_platform_list, APPLOVIN)) {
             // applovin mintegral mediation
-            implementation 'com.applovin.mediation:mintegral-adapter:16.6.51.0@aar'
+            implementation 'com.applovin.mediation:mintegral-adapter:16.6.61.1@aar'
         }
         if (isContains(include_platform_list, TRADPLUS)) {
             // tradplus mintegral mediation
-            implementation 'com.tradplusad:tradplus-mintegralx_overseas:18.11.1.0.1'
+            implementation 'com.tradplusad:tradplus-mintegralx_overseas:18.11.2.0.1'
         }
         if (isContains(include_platform_list, ADMOB)) {
             // google mintegral mediation
-            implementation 'com.google.ads.mediation:mintegral:16.6.34.0'
+            implementation 'com.google.ads.mediation:mintegral:16.6.51.0@aar'
         }
     }
 //////////////////////////////////////////////////////////////////////////////////////////
 
     if (isContains(include_platform_list, INMOBI)) {
         // Inmobi
-        implementation 'com.inmobi.monetization:inmobi-ads-kotlin:10.6.6'
+        implementation 'com.inmobi.monetization:inmobi-ads-kotlin:10.6.7'
         if (isContains(include_platform_list, APPLOVIN)) {
             // applovin inmobi mediation
-            implementation 'com.applovin.mediation:inmobi-adapter:10.6.6.0@aar'
+            implementation 'com.applovin.mediation:inmobi-adapter:10.6.7.0@aar'
         }
         if (isContains(include_platform_list, TRADPLUS)) {
             //tradplus inmobi mediation
-            implementation 'com.tradplusad:tradplus-inmobix:23.11.1.0.1'
+            implementation 'com.tradplusad:tradplus-inmobix:23.11.2.0.1'
         }
         if (isContains(include_platform_list, ADMOB)) {
             // google inmobi mediation
-            implementation 'com.google.ads.mediation:inmobi:10.6.6.0'
+            implementation 'com.google.ads.mediation:inmobi:10.6.7.0'
         }
     }
 //////////////////////////////////////////////////////////////////////////////////////////
@@ -160,11 +160,11 @@ dependencies {
         }
         if (isContains(include_platform_list, TRADPLUS)) {
             // tradplus unity mediation
-            implementation 'com.tradplusad:tradplus-unity:5.11.1.0.1'
+            implementation 'com.tradplusad:tradplus-unity:5.11.2.0.1'
         }
         if (isContains(include_platform_list, ADMOB)) {
             // google unity mediation
-            implementation 'com.google.ads.mediation:unity:4.9.2.0'
+            implementation 'com.google.ads.mediation:unity:4.9.3.0'
         }
     }
 //////////////////////////////////////////////////////////////////////////////////////////
@@ -178,7 +178,7 @@ dependencies {
         }
         if (isContains(include_platform_list, TRADPLUS)) {
             // tradplus vungle mediation
-            implementation 'com.tradplusad:tradplus-vunglex:7.11.1.0.1'
+            implementation 'com.tradplusad:tradplus-vunglex:7.11.2.0.1'
         }
         if (isContains(include_platform_list, ADMOB)) {
             // google vungle medation
@@ -189,18 +189,18 @@ dependencies {
 
     if (isContains(include_platform_list, IRONSOURCE)) {
         // ironSource
-        implementation 'com.ironsource.sdk:mediationsdk:7.7.0'
+        implementation 'com.ironsource.sdk:mediationsdk:7.9.0'
         if (isContains(include_platform_list, APPLOVIN)) {
             // Vungle applovin mediation
-            implementation 'com.applovin.mediation:ironsource-adapter:7.7.0.0.0@aar'
+            implementation 'com.applovin.mediation:ironsource-adapter:7.9.0.0.0@aar'
         }
         if (isContains(include_platform_list, TRADPLUS)) {
             // tradplus mediation
-            implementation 'com.tradplusad:tradplus-ironsource:10.11.1.0.1'
+            implementation 'com.tradplusad:tradplus-ironsource:10.11.2.0.1'
         }
         if (isContains(include_platform_list, ADMOB)) {
             // google ironsource mediation
-            implementation 'com.google.ads.mediation:ironsource:7.7.0.1'
+            implementation 'com.google.ads.mediation:ironsource:7.8.1.1'
         }
     }
 //////////////////////////////////////////////////////////////////////////////////////////
@@ -214,7 +214,7 @@ dependencies {
         }
         if (isContains(include_platform_list, TRADPLUS)) {
             // tradplus Bigo mediation
-            implementation 'com.tradplusad:tradplus-bigo:57.11.1.0.1'
+            implementation 'com.tradplusad:tradplus-bigo:57.11.2.0.1'
         }
         if (isContains(include_platform_list, ADMOB)) {
             // google bigo mediation
