1. 增加生成渠道包功能

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ ext {
     openRelease = true
     aab2apk = true
     encryptFiles = ["data_config_back.json"]
+    channels = ["umeng", "talking"]
 }
 def useProject = true;
 
