--- a/groovy/encrypt.gradle
+++ b/groovy/encrypt.gradle
@@ -335,6 +335,7 @@ def openBundleReleaseDir(String taskName) {
             }
             def cmd = openCmd + " " + outputPath
             cmd.execute()
+            println ""
             println "> Task :${project.name}:openBundleDir [${outputPath}]"
         } catch (Exception e) {
         }
@@ -373,6 +374,8 @@ def getChannelFileName() {
 }
 
 def transformAab2ApkFlavor() {
+    println ""
+    println "> Task :${project.name}:transformAab2Apk"
     if (project.android.productFlavors.size() > 0) {// 如果有产品风味
         project.android.productFlavors.each { flavor ->
             def productFlavor = toUpperCaseFirstOne(flavor.name)
@@ -464,7 +467,8 @@ def transformAab2ApkLocked(flavorName, aabOutputAabFileName) {
             def baseName = finalBundleFileName.substring(0, finalBundleFileName.lastIndexOf("."))
             def channelFileName = baseName + "_" + channel + ".aab"
             def channelAabFile = new File(fileDir, channelFileName)
-            println "> Task :${project.name}:transformAab2Apk [" + flavorName + "] Generate Channel Apk : [" + channel + "]"
+            println ""
+            println "> Task :${project.name}:generateChannelApk [" + flavorName + "] Generate Channel Apk : [" + channel + "]"
             copyFile(finalBundleFile.getAbsolutePath(), channelAabFile.getAbsolutePath())
             appendChannelToAabFile(channelAabFile.getAbsolutePath(), channel, fileDir, flavorName, getChannelFileName())
             executeTransformAab2Apk(signConfig, channelAabFile, bundleToolPath, flavorName)
@@ -495,8 +499,13 @@ def executeTransformAab2Apk(signConfig, finalBundleFile, bundleToolPath, flavorN
     def cmdString = cmdList.join(" ")
     println "> Task :${project.name}:transformAab2Apk [" + flavorName + "] Command : [" + optimizeCommand(cmdString) + "]"
     try {
-        def result = cmdString.execute().text.trim()
-        println "> Task :${project.name}:transformAab2Apk [" + flavorName + "] Result : [" + result + "]"
+        def process = cmdString.execute()
+        def pid = process.waitFor()
+        if (pid == 0) {
+            println "> Task :${project.name}:transformAab2Apk [" + flavorName + "] Result : [" + process.text.trim() + "]"
+        } else {
+            println "> Task :${project.name}:transformAab2Apk [" + flavorName + "] Error : [" + process.err.text + "]"
+        }
         if (finalApksFile != null && finalApksFile.exists()) {
             extractFileFromZip(finalApksFile, "universal.apk", finalApkFile)
             println "> Task :${project.name}:transformAab2Apk [" + flavorName + "] finalApkFile : [" + finalApkFile + "]"
@@ -507,7 +516,7 @@ def executeTransformAab2Apk(signConfig, finalBundleFile, bundleToolPath, flavorN
             println "> Task :${project.name}:transformAab2Apk [" + flavorName + "] transform aab to apk failed"
         }
     } catch (Exception e) {
-        println "error : " + e
+        println "> Task :${project.name}:transformAab2Apk [" + flavorName + "] error : " + e
     }
 }
 
@@ -520,9 +529,8 @@ def copyFile(srcFile, dstFile) {
 }
 
 def appendChannelToAabFile(aabFilePath, channel, releaseDir, flavorName, channelFileName) {
-    println "\n"
-    println ":${project.name}:appendChannelsFile [" + flavorName + "][" + channel + "] >>>>>>>>> Append Channels File Start <<<<<<<<<"
-    println ":${project.name}:appendChannelsFile [" + flavorName + "][" + channel + "] BaseApk [" + aabFilePath + "]"
+    println "> Task :${project.name}:appendChannelsFile [" + flavorName + "][" + channel + "] >>>>>>>>> Append Channels File Start <<<<<<<<<"
+    println "> Task :${project.name}:appendChannelsFile [" + flavorName + "][" + channel + "] BaseApk [" + aabFilePath + "]"
 
     // 创建渠道文件
     File tempBase = new File(releaseDir, "base")
@@ -546,7 +554,7 @@ def appendChannelToAabFile(aabFilePath, channel, releaseDir, flavorName, channel
     channelFile.delete()
     tempAssets.delete()
     tempBase.delete()
-    println ":${project.name}:appendChannelsFile [" + flavorName + "][" + channel + "] >>>>>>>>> Append Channels File Complete <<<<<<<<<\n"
+    println "> Task :${project.name}:appendChannelsFile [" + flavorName + "][" + channel + "] >>>>>>>>> Append Channels File Complete <<<<<<<<<\n"
 }
 
 def downloadFile(srcUrl, outputFilePath, progressText) {
@@ -1120,15 +1128,15 @@ def appendFilesIntoApk(workDir, packageFile, fileList) {
         cmd = getAppendCmdListByAapt(packageFile, aaptFile, fileList)
     }
     if (cmd == null || cmd.isEmpty()) {
-        println ":${project.name}:appendFilesIntoApk Error [cmd is empty]"
+        println "> Task :${project.name}:appendFilesIntoApk Error [cmd is empty]"
         return
     }
     def cmdString = cmd.join(" ")
-    println ":${project.name}:appendFilesIntoApk Command [" + optimizeCommand(cmdString) + "]"
+    println "> Task :${project.name}:appendFilesIntoApk Command [" + optimizeCommand(cmdString) + "]"
     try {
         Process p = cmdString.execute(null, new File(workDir))
         p.waitFor(20, TimeUnit.SECONDS)
-        printOutput(p)
+        // printOutput(p)
         p.closeStreams()
         p.destroy();
     } catch (Exception e) {
